simple crud for pneu get post delete put getOne
